--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "postcss": "^8.4.18",
     "postcss-cli": "^10.0.0",
-    "postcss-import": "^15.0.0"
+    "postcss-import": "^15.0.0",
+    "tailwindcss": "^3.2.1"
   }
 }
